[gd_scene load_steps=2 format=3 uid="uid://c7m5xqr9rhgxvi"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_1hdqg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1hdqg")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="PlayerInfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = -20.0

[node name="PlayerName" type="Label" parent="PlayerInfoPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "Player Name"

[node name="PlayerLevel" type="Label" parent="PlayerInfoPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 90.0
text = "Level 1"

[node name="PlayerELO" type="Label" parent="PlayerInfoPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 130.0
text = "ELO: 1000"

[node name="RecentMatches" type="Label" parent="PlayerInfoPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 140.0
offset_right = -20.0
offset_bottom = 170.0
text = "Recent: 0 matches"

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="MatchGameButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Match Game"

[node name="CollectionButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Collection"

[node name="SettingsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Settings"

[node name="NFCStatusPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0

[node name="StatusLabel" type="Label" parent="NFCStatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -30.0
text = "NFC: Ready"

[node name="LastScanLabel" type="Label" parent="NFCStatusPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -25.0
offset_right = -10.0
offset_bottom = -5.0
text = "Last: None"

[node name="AmbientAudio" type="AudioStreamPlayer" parent="."]
